# Like2D

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  CREDITS.md  README.md  build-full.bat  build.bat  build.sh  contributors.txt  license.txt  resource.rc  updates.txt
.github/workflows/: build.yml
backup/src/: CMakeLists.txt  main.cpp
backup/src/core/: Engine.cpp  Engine.h
backup/src/renderer/: Renderer.cpp
backup/src/scripting/: LuaBindings.cpp  LuaBindings.h
docs/: API_REFERENCE.md  BUILD_SYSTEM.md  GETTING_STARTED.md  TUTORIALS.md
include/: Like2D.h
scripts/: main.luau
src/: CMakeLists.txt  Like2D.cpp  main.cpp  platform.h
src/audio/: AudioManager.cpp  AudioManager.h
src/compile/: CompilerApp.cpp  compiler.cpp  compiler.hpp
src/core/: Engine.cpp  Engine.h
src/network/: NetworkManager.cpp  NetworkManager.h
src/renderer/: Renderer.cpp  Renderer.h
src/scripting/: LuaBindings.cpp  LuaBindings.h
website/: advanced-api.html  api-reference.html  getting-started.html  index.html  license.html  luau-guide.html  privacy-policy.html  script.js  styles.css  terms-of-service.html  tutorials.html
website/docs/: advanced.html  animation.html  audio.html  callbacks.html  doc-styles.css  getting-started.html  index.html  input.html  luau-guide.html  modules.html  physics.html  rendering.html  tutorials.html
